--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,25 +45,28 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="10dp"
+                android:layout_marginEnd="250dp"
                 android:text="Estado"
-                android:ems="10"
+                android:ems="40"
                 android:hint="opciones"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_title" />
+
             <Spinner
                 android:id="@+id/planets_spinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_width="200dp"
+                android:layout_height="24dp"
+
+                android:layout_marginBottom="50dp"
                 android:ems="10"
                 android:inputType="textPersonName"
+                app:layout_constraintBottom_toTopOf="@+id/datebtn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edit_desc" />
+                />
 
             <Button
                 android:id="@+id/datebtn"
