--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="planets_array">array
+        <item></item>
         <item>Pendiente</item>
         <item>Cancelado</item>
         <item>Realizada</item>
