--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -20,7 +20,7 @@
 
             android:text="Title"
             android:textSize="24sp"
-            android:textColor="#000"
+            android:textColor="#FFF"
             android:padding="8dp"
             android:id="@+id/title_text"/>
 
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="Desccription"
             android:textSize="24sp"
-            android:textColor="#000"
+            android:textColor="#FFF"
             android:padding="8dp"
             android:id="@+id/desc_text"/>
 
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:text="Date"
             android:textSize="24sp"
-            android:textColor="#000"
+            android:textColor="#FFF"
             android:padding="8dp"
             android:id="@+id/date_text"/>
         <TextView
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:text="Time"
             android:textSize="24sp"
-            android:textColor="#000"
+            android:textColor="#FFF"
             android:padding="8dp"
             android:id="@+id/time_text"/>
     </LinearLayout>
