--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     android:layout_margin="13dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,13 +15,14 @@
 
         >
 
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:text="Title"
             android:textSize="24sp"
-            android:textColor="#FFF"
+            android:textColor="#000"
             android:padding="8dp"
             android:id="@+id/title_text"/>
 
@@ -29,7 +31,7 @@
             android:layout_height="wrap_content"
             android:text="Desccription"
             android:textSize="24sp"
-            android:textColor="#FFF"
+            android:textColor="#000"
             android:padding="8dp"
             android:id="@+id/desc_text"/>
 
@@ -38,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="Date"
             android:textSize="24sp"
-            android:textColor="#FFF"
+            android:textColor="#000"
             android:padding="8dp"
             android:id="@+id/date_text"/>
         <TextView
@@ -46,9 +48,10 @@
             android:layout_height="wrap_content"
             android:text="Time"
             android:textSize="24sp"
-            android:textColor="#FFF"
+            android:textColor="#000"
             android:padding="8dp"
             android:id="@+id/time_text"/>
     </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
