--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -142,6 +142,7 @@
         android:layout_width="172dp"
         android:layout_height="50dp"
         android:layout_marginStart="120dp"
+        android:layout_marginEnd="120dp"
         android:background="@drawable/btn_bg"
         android:drawablePadding="20dp"
         android:paddingStart="25dp"
@@ -150,6 +151,7 @@
         android:textAllCaps="false"
         app:drawableLeftCompat="@drawable/ic_google"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.35" />
